Fix id resetting state exception and use int instead of lomg.